<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addDiaryViewModel"
            type="jp.ryuk.deglog_a01.adddiary.AddDiaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".adddiary.AddDiaryFragment">

        <TextView
            android:id="@+id/text_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_diary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_add_title" />

        <Spinner
            android:id="@+id/spinner_add_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@{addDiaryViewModel.names}"
            app:layout_constraintEnd_toStartOf="@+id/button_go_add_profile"
            app:layout_constraintStart_toEndOf="@+id/text_add_name"
            app:layout_constraintTop_toTopOf="@+id/text_add_name"
            tools:listitem="@android:layout/activity_list_item" />

        <TextView
            android:id="@+id/text_add_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="@+id/text_add_name"
            app:layout_constraintTop_toBottomOf="@+id/text_add_name" />

        <EditText
            android:id="@+id/edit_add_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={addDiaryViewModel.weight}"
            app:layout_constraintBottom_toBottomOf="@+id/button_weight_minus"
            app:layout_constraintEnd_toStartOf="@+id/button_weight_plus"
            app:layout_constraintStart_toEndOf="@+id/button_weight_minus"
            app:layout_constraintTop_toTopOf="@+id/button_weight_minus" />

        <TextView
            android:id="@+id/text_add_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/length"
            app:layout_constraintStart_toStartOf="@+id/text_add_weight"
            app:layout_constraintTop_toBottomOf="@+id/text_add_weight" />

        <EditText
            android:id="@+id/edit_add_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/length_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={addDiaryViewModel.length}"
            app:layout_constraintBottom_toBottomOf="@+id/button_length_minus"
            app:layout_constraintEnd_toStartOf="@+id/button_length_plus"
            app:layout_constraintStart_toEndOf="@+id/button_length_minus"
            app:layout_constraintTop_toBottomOf="@+id/button_weight_minus" />

        <TextView
            android:id="@+id/text_add_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/memo"
            app:layout_constraintStart_toStartOf="@+id/text_add_length"
            app:layout_constraintTop_toBottomOf="@+id/text_add_length" />

        <EditText
            android:id="@+id/edit_add_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/memo_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={addDiaryViewModel.memo}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_add_memo"
            app:layout_constraintTop_toTopOf="@+id/text_add_memo" />

        <Button
            android:id="@+id/button_add_new_diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{addDiaryViewModel.enable}"
            android:onClick="@{() -> addDiaryViewModel.addNewDiary()}"
            android:text="@string/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_add_memo" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up"
            app:isGone="@{addDiaryViewModel.enable}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_new_diary" />

        <Button
            android:id="@+id/button_weight_plus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> addDiaryViewModel.plusWeight()}"
            android:text="@string/button_plus"
            app:layout_constraintBottom_toBottomOf="@+id/edit_add_weight"
            app:layout_constraintEnd_toStartOf="@+id/button_weight_clear"
            app:layout_constraintTop_toTopOf="@+id/edit_add_weight"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_weight_minus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> addDiaryViewModel.minusWeight()}"
            android:text="@string/button_minus"
            app:layout_constraintStart_toEndOf="@+id/text_add_weight"
            app:layout_constraintTop_toTopOf="@+id/text_add_weight" />

        <Button
            android:id="@+id/button_length_plus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> addDiaryViewModel.plusLength()}"

            android:text="@string/button_plus"
            app:layout_constraintBottom_toBottomOf="@+id/edit_add_length"
            app:layout_constraintEnd_toStartOf="@+id/button_length_clear"
            app:layout_constraintTop_toTopOf="@+id/edit_add_length" />

        <Button
            android:id="@+id/button_length_minus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> addDiaryViewModel.minusLength()}"
            android:text="@string/button_minus"

            app:layout_constraintStart_toEndOf="@+id/text_add_length"
            app:layout_constraintTop_toTopOf="@+id/text_add_length" />

        <Button
            android:id="@+id/button_length_clear"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="@{() -> addDiaryViewModel.clearLength()}"
            android:text="@string/button_clear"
            app:layout_constraintBottom_toBottomOf="@+id/button_length_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_length_plus" />

        <Button
            android:id="@+id/button_weight_clear"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="@{() -> addDiaryViewModel.clearWeight()}"
            android:text="@string/button_clear"
            app:layout_constraintBottom_toBottomOf="@+id/button_weight_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_weight_plus" />

        <Button
            android:id="@+id/button_go_add_profile"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="@{() -> addDiaryViewModel.onClickAddProfile()}"
            android:text="@string/button_plus"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_add_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_add_name" />

        <Button
            android:id="@+id/button_add_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dummy"
            android:onClick="@{() -> addDiaryViewModel.addDummy()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>